--- a/assets/css/prototype/approved/topics-landing-wide.scss
+++ b/assets/css/prototype/approved/topics-landing-wide.scss
@@ -3,6 +3,9 @@
     padding-top: 10%;
     padding-bottom: 10%;
 }
+.cards{
+    margin-left: 17%;
+}
 
 //taken from _header.scss at .usa-nav and _navbar.scss under uflex
 .for__later{
